services/inventree/resources/server-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: inventree-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: inventree
          image: inventree
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: data
              mountPath: /home/inventree/data
      volumes:
        - name: config
          configMap:
            name: inventree-config
        - name: data
          persistentVolumeClaim:
            claimName: inventree-data
