services/inventree/resources/worker-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: inventree-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/component: worker
    spec:
      containers:
        - name: inventree
          image: inventree
          command: ["invoke", "worker"]
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: data
              mountPath: /home/inventree/data
      volumes:
        - name: config
          configMap:
            name: inventree-config
        - name: data
          persistentVolumeClaim:
            claimName: inventree-data
