services/inventree/resources/server-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: inventree-server
  labels:
    app.kubernetes.io/component: server
spec:
  selector:
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
