services/inventree/resources/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventree-server
  labels:
    app.kubernetes.io/component: server
  annotations:
    cert-manager.io/cluster-issuer: intranet-dns01-prod
spec:
  rules:
    - host: inventree.int.fivebytestudios.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: inventree-server
              port: 
                name: http
  tls:
    - hosts:
        - inventree.int.fivebytestudios.com
      secretName: inventree-tls
